contest/static/teams/void_main()/compile.txt
code.cpp:1:1: error: ‘import’ does not name a type
 import math as m
 ^
